--- a/backend/.env.example
+++ b/backend/.env.example
@@ -20,12 +20,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=mysql
+DB_PORT=3306
+DB_DATABASE=laravel
+DB_USERNAME=user
+DB_PASSWORD=password
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -63,3 +63,10 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+SHOPIFY_DOMAIN = "abc"
+SHOPIFY_API_KEY = "abc"
+SHOPIFY_API_SECRET = "abc"
+SHOPIFY_API_SCOPES ='read_products,write_products,read_themes,read_orders,write_orders'
+SHOPIFY_API_WEBHOOK_SECRET = 'abc'
+SHOPIFY_API_ACCESS_TOKEN = "abc"
